# aho__ai-handoff

./: .gitignore  Cargo.toml  README.ja.md  README.ko.md  README.md  README.zh.md  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  task-1.2-report.md  task-1.2-review.diff  task-2.1-brief.md  task-2.1-report.md  task-2.1-review.diff  task-2.2-brief.md  task-2.2-report.md  task-2.2-review.diff  task-3.1-brief.md  task-3.1-report.md  task-3.1-review.diff  task-4.1-brief.md  task-4.1-report.md  task-4.1-review.diff  task-4.2-brief.md  task-4.2-report.md  task-4.2-review.diff  task-4.3-brief.md
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  installer.nsi  nsis-hooks.nsh  tauri.conf.json  tauri.sidecars.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
commands/: handoff.md
config/: defaults.json
core/: cli.mjs
core/capsule/: approval.mjs  checkpoint.mjs  create.mjs  generation.mjs  history.mjs  inject-track.mjs  lifecycle.mjs  pending-notice.mjs  store.mjs
core/hooks/: handoff.mjs  session-start.mjs  stop.mjs  trigger.mjs  turn-handoff.mjs  user-prompt.mjs
core/lib/: config-edit.mjs  dedupe.mjs  fingerprint.mjs  fsx.mjs  gitctx.mjs  hook-output.mjs  i18n.mjs  inline-capsule.mjs  paths.mjs  redact.mjs  state-report.mjs  statusline-segment.mjs  taskid.mjs  validate.mjs
core/memory/: recall.mjs  store.mjs
core/project/: index-md.mjs  index-store.mjs
core/sensors/: appserver-protocol.mjs  claude-statusline.mjs  codex-appserver.mjs  samples.mjs
core/setup/: claude-statusline.mjs
crates/ai-handoff-cli/: Cargo.toml
crates/ai-handoff-cli/src/: daemon_supply.rs  host_main.rs  host_runtime.rs  lib.rs
crates/ai-handoff-cli/src/commands/: account.rs  autostart.rs  checkpoint.rs  config.rs  daemon.rs  doctor.rs  handoff.rs  hook.rs  install.rs  mod.rs  retarget.rs  statusline.rs  tui.rs  uninstall.rs  update.rs  usage.rs
crates/ai-handoff-cli/src/host_launcher/: mod.rs  windows.rs
crates/ai-handoff-cli/tests/: doctor_checkpoint.rs  e2e_hook_daemon.rs  install_dry_run.rs  uninstall.rs
crates/ai-handoff-core/: Cargo.toml
crates/ai-handoff-core/src/: account.rs  account_api.rs  capsule.rs  capsule_codec.rs  checkpoint_input.rs  config.rs  dashboard.rs  fingerprint.rs  git_info.rs  keychain.rs  lib.rs  paths.rs  process.rs  secure_fs.rs  sensor.rs  statusline.rs  update_check.rs
crates/ai-handoff-core/src/install/: backup.rs  claude.rs  claude_statusline.rs  codex_config.rs  codex_hooks.rs  detect.rs  diff.rs  duplicate.rs  mod.rs  plugin.rs  state.rs
crates/ai-handoff-core/tests/: secure_fs.rs
crates/ai-handoff-core/tests/fixtures/: codex-config-complex.toml
crates/ai-handoff-daemon/: Cargo.toml
crates/ai-handoff-daemon/src/: checkpoint_episode.rs  lib.rs  router.rs  store.rs  trigger_mark.rs
crates/ai-handoff-daemon/tests/: trigger_mark.rs
crates/ai-handoff-ipc/: Cargo.toml
crates/ai-handoff-usage/: Cargo.toml
crates/ai-handoff-usage/src/: aggregate.rs  claude.rs  codex.rs  engine.rs  lib.rs  model.rs  pricing.rs
docs/: README.ja.md  README.ko.md  README.zh.md  account-add-oauth-design.md
hooks/: hooks-codex.json  hooks.json
locales/: app.yml
schemas/: capsule.schema.json  memory-shard.schema.json
scripts/: check-windows-subsystems.ps1  install.ps1  install.sh  run-hook.mjs  validate-package.mjs  verify-windows-installer-icon.ps1
tests/: approval.test.mjs  appserver-protocol.test.mjs  ask-instruction.test.mjs  bidirectional-hooks.e2e.test.mjs  burn-rate-stop.test.mjs  capsule-bounds.test.mjs  capsule-create.test.mjs  checkpoint.test.mjs  claude-setup.test.mjs  claude-statusline.test.mjs  cli-handoff.test.mjs  cli-hooks.test.mjs  cli-input.test.mjs  cli.test.mjs  codex-appserver-spawn.test.mjs  codex-appserver.e2e.test.mjs  codex-hooks-packaging.test.mjs  config-concurrency.test.mjs  dedupe.test.mjs  degraded-recovery.test.mjs  doctor-audit.test.mjs  fingerprint-redact.test.mjs  fingerprint.test.mjs  fsx.test.mjs  handoff-approval.test.mjs  handoff-consume.test.mjs  handoff-context.test.mjs  handoff-query.test.mjs  handoff-recent.test.mjs  history-concurrency.test.mjs  history.test.mjs  hook-dispatcher.test.mjs  hook-output.test.mjs  hookguard-prune.test.mjs  index-md.test.mjs  inline-capsule.test.mjs  memory-recall.test.mjs  memory-store.test.mjs  packaging.test.mjs  paths.test.mjs  (+19 more)
(+50 files in other folders)
