[package]
name = "ai-handoff-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
directories.workspace = true
base64.workspace = true
ureq.workspace = true
toml_edit = "0.22"
toml = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
filetime = "0.2"
