[package]
name = "ai-handoff-usage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
