[package]
name = "ai-handoff-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-handoff-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
ai-handoff-core = { path = "../../../crates/ai-handoff-core" }
tauri = { version = "2", features = [] }
