[package]
name = "ai-handoff-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-handoff-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
ai-handoff-core = { path = "../../../crates/ai-handoff-core" }
ai-handoff-ipc = { path = "../../../crates/ai-handoff-ipc" }
ai-handoff-tui = { path = "../../../crates/ai-handoff-tui" }
ai-handoff-usage = { path = "../../../crates/ai-handoff-usage" }
chrono.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
